--- a/backend/complete/pom.xml
+++ b/backend/complete/pom.xml
@@ -8,8 +8,9 @@
 		<version>3.1.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+
 	<groupId>com.example</groupId>
-	<artifactId>spring-boot-complete</artifactId>
+	<artifactId>spring-boot-example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring-boot-complete</name>
 	<description>Demo project for Spring Boot</description>
@@ -38,7 +39,25 @@
 			<scope>test</scope>
 		</dependency>
 		<!-- end::tests[] -->
+		
+		<dependency>
+      		<groupId>org.mariadb.jdbc</groupId>
+      		<artifactId>mariadb-java-client</artifactId>
+      		<version>3.1.4</version>
+    	</dependency>
+
+<!-- https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+
+
+<dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
+
+
 	</dependencies>
+
 
 	<build>
 		<plugins>
