--- a/backend/src/main/resources/example.application.properties
+++ b/backend/src/main/resources/example.application.properties
@@ -1,12 +1,5 @@
-spring.datasource.url=jdbc:h2:mem:book_library
-spring.datasource.username=[CHANGEUSERNAMEHERE]
-spring.datasource.password=[CHANGEPASSWORDHERE]
-spring.datasource.driver-class-name=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=none
-
-#_____Erlaubt die nutzung des Initialisierungsskripts books.sql:_____
-
-# Pfad zum Initialisierungsskript (ohne classpath: für resources-Ordner)
-spring.datasource.schema=classpath:sql/books.sql
-# Spring Boot führt das Initialisierungsskript beim Start aus
-spring.datasource.initialization-mode=always
+spring.datasource.url=jdbc:mariadb://localhost:3306/book_library
+spring.datasource.username=[CHANGENAME]
+spring.datasource.password=[CHANGEPASSWORD]
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
