--- a/backend/src/main/resources/example.application.properties
+++ b/backend/src/main/resources/example.application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/book_library
-spring.datasource.username=[CHANGENAME]
+spring.datasource.username=[CHANGEUSERNAME]
 spring.datasource.password=[CHANGEPASSWORD]
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
